--- a/show.html
+++ b/show.html
@@ -1,124 +1,229 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Киномонстр - информация о фильме</title>
-	<meta name="description" content="Киномонстр - это портал о кино" />
-	<meta name="keywords" content="фильмы, фильмы онлайн, hd" />
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<main class="main">
-		<header class="header">
-		<div class="logo">
-			<div class="logo-text">
-				<h1><a href="index.html">Киномонстр</a></h1>
-				<h2>Кино наша страсть</h2>
-			</div>
-		</div>
-		<nav class="menubar">
-			<ul class="menu">
-				<li><a href="index.html">Главная</a></li>
-				<li class="selected"><a href="films.html">Фильмы</a></li>
-				<li><a href="#">Сериалы</a></li>
-				<li><a href="rating.html">Рейтинг фильмов</a></li>
-				<li><a href="contact.html">Контакты</a></li>
-			</ul>
-		</nav>
-	</header>
-	<div class="site-content">
-		<div class="sidebar-container">
-			<div class="sidebar">
-				<h2>Поиск</h2>
-				<form action="#" method="post" id="search-form">
-					<input type="search" name="search_field" placeholder="ваш запрос">
-					<input type="submit" class="btn" value="найти">
-				</form>
-			</div>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Киномонстр - show</title>
 
-			<div class="sidebar">
-				<h2>Вход</h2>
-				<form action="#" method="post" id="login">
-					<input type="text" name="login-field" placeholder="логин">
-					<input type="password" name="password-field" placeholder="пароль">
-					<input type="submit" class="btn" value="вход">
-					<div class="lables-passreg-text">
-						<span><a href="#">Забыли пароль?</a></span> | <span><a href="#">Регистрация</a></span>
-					</div>
-				</form>
-			</div>
-			<div class="sidebar">
-				<h2>Новости</h2>
-				<span>31.02.2018</span>
-				<p>Мы запустили расширенный поиск</p>
-				<a href="#">читать</a>
-			</div>
+    <!-- Bootstrap -->
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
-			<div class="sidebar">
-				<h2>Рейтинг фильмов</h2>
-				<ul>
-					<li><a href="show.html">Интерстеллар</a><span class="rating-sidebar">8.1</span></li>
-					<li><a href="show.html">Матрица</a><span class="rating-sidebar">8.0</span></li>
-					<li><a href="show.html">Безумный макс</a><span class="rating-sidebar">7.5</span></li>
-					<li><a href="show.html">Облачный атлас</a><span class="rating-sidebar">7.4</span></li>
-				</ul>
-			</div>
-		</div>
+    <!-- main style -->
 
-		<div class="content">
-				<h1>Интерстеллар</h1>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/6ybBuTETr3U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <link href="assets/css/style.css" rel="stylesheet">
 
-				<div class="info-film-page">
-					<span class="label">рейтинг: </span><span class="value">8.1 / 10</span>
-					<span class="label">год: </span><span class="value">2014</span>
-					<span class="label">режиссер: </span><span class="value">Кристофер Нолан</span>
-				</div>
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row">
+        <nav role="navigation" class="navbar navbar-inverse">
+          <div class="container">
 
-				<hr>
+            <header class="navbar-header header">
 
-				<h2>Описание Интерстеллар</h2>
-				<div class="description-film">
-					<img src="assets/img/inter.png" alt="Фильм Интерстеллар">
-					Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
-				</div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h1><a href="index.html">КиноМонстр</a></h1>
+                    <p>Кино наша страсть!</p>
+                  </div>
+                </div>
+              </div>
+              <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
 
-				<hr>
-				<h2>Отзывы об Интерстелларе</h2>
+              </button>
+            </header>
 
-				<div class="reviews">
-					<div class="review-name">Сергей</div>
-					<div class="review-text">Отличный фильм, 3 часа пролетели незаметно</div>
-				</div>
+            <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
+              <ul class="nav nav-pills">
+                <li><a href="index.html">Главная</a></li>
+                <li class="active"><a href="films.html">Фильмы</a></li>
+                <li><a href="#">Сериалы</a></li>
+                <li><a href="rating.html">Рейтинг фильмов</a></li>
+                <li><a href="contact.html">Контакты</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
 
-				<div class="reviews">
-					<div class="review-name">Дмитрий</div>
-					<div class="review-text">После фильма Начало, я с нетерпением ждал еще работ от Кристофера Нолана. Интерстеллар меня впечатлил.</div>
-				</div>
+    <main class="wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9 col-lg-push-3">
 
-				<div class="send">
-					<form action="#" method="post" id="review">
-						<input type="text" name="review-name" placeholder="ваше имя">
-						<textarea name="review-text"></textarea>
-						<input type="submit" value="отправить">
-					</form>
-				</div>
+            <form action="#" role="search" class="visible-xs">
+                <div class="form-group">
+                  <div class="input-group">
+                    <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+                    <div class="input-group-btn">
+                      <button class="btn btn-default btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                  </div>
+                </div>
+            </form>
 
+            <h1>Интерстеллар</h1>
+            <hr>
 
-		</div>
+            <div class="embed-responsive embed-responsive-16by9">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/LozbV0cOApw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="well info-block text-center">
+              Год: <span class="badge">2015</span>
+              Рейтинг: <span class="badge">8.9</span>
+              Режиссер: <span class="badge">Кристофер Нолан</span>
+            </div>
 
-	</div>
-	<footer class="footer">
-		<p>
-			<a href="index.html">Главная</a> |
-			<a href="films.html">Фильмы</a> |
-			<a href="#">Сериалы</a> |
-			<a href="rating.html">Рейтинг фильмов</a> |
-			<a href="contact.html">Контакты</a> 
-		</p>
-		<p>wh-db.com 2015</p>
-	</footer>
-	</main>
-</body>
+            <div class="margin-8"></div>
+
+            <h2>Описание Интерстеллар</h2>
+            <hr>
+            <div class="well">
+              Когда засуха приводит человечество к продовольственному кризису, коллектив исследователей и учёных отправляется сквозь червоточину (которая предположительно соединяет области пространства-времени через большое расстояние) в путешествие чтобы превзойти прежние ограничения для космических путешествий человека и переселить человечество на другую планету.
+            </div>
+
+            <div class="margin-8"></div>
+
+            <h2>Отзывы об Интерстеллар</h2>
+            <hr>
+
+            <div class="panel panel-info">
+              <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> <span>Сергей</span></div>
+              <div class="panel-body">
+                Отличный фильм, 3 часа пролетели незаметно
+              </div>
+            </div>
+
+            <div class="panel panel-info">
+              <div class="panel-heading"><i class="glyphicon glyphicon-user"></i> <span>Дмитрий</span></div>
+              <div class="panel-body">
+                После фильма Начало, я с нетерпением ждал еще работ от Кристофера Нолана. Интерстеллар меня впечатлил.
+              </div>
+            </div>
+
+            <form action="#">
+              <div class="form-group">
+                <input type="text" placeholder="ваше имя" class="form-control input-lg">
+              </div>
+              <div class="form-group">
+                <textarea class="form-control"></textarea>
+              </div>
+              <button class="btn btn-lg btn-warning pull-right" type="submit">Отправить</button>
+            </form>
+            <div class="margin-8 clear"></div>
+
+          </div>
+          <div class="col-lg-3 col-lg-pull-9">
+            <div class="panel panel-info hidden-xs">
+              <div class="panel-heading"><div class="sidebar-header">Поиск</div></div>
+              <div class="panel-body">
+                <form action="#" role="search">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <input type="search" class="form-control input-lg" placeholder="Ваш запрос">
+                      <div class="input-group-btn">
+                        <button class="btn btn-default btn-lg" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+
+            <div class="panel panel-info">
+              <div class="panel-heading"><div class="sidebar-header">Вход</div></div>
+              <div class="panel-body">
+                <form action="#" role="form">
+                  <div class="form-group">
+                    <input type="text" class="form-control input-lg" placeholder="Логин">
+                  </div>
+                  <div class="form-group">
+                    <input type="password" class="form-control input-lg" placeholder="Пароль">
+                  </div>
+                  <button type="submit" class="btn btn-warning pull-right">вход</button>
+                </form>
+              </div>
+            </div>
+
+            <div class="panel panel-info">
+              <div class="panel-heading"><div class="sidebar-header">Новости</div></div>
+              <div class="panel-body">
+                <p>31.02.2017</p>
+                <p>Мы запустили новый сервис</p>
+              </div>
+            </div>
+
+            <div class="panel panel-info">
+              <div class="panel-heading"><div class="sidebar-header">Рейтинг фильмов</div></div>
+              <div class="panel-body">
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Интерстеллар</a>
+                    <span class="badge">8.9</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Безумный Макс</a>
+                    <span class="badge">8.7</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Матрица</a>
+                    <span class="badge">8.3</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Обланый атлас</a>
+                    <span class="badge">8.1</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Интерстеллар</a>
+                    <span class="badge">8.9</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Безумный Макс</a>
+                    <span class="badge">8.7</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Матрица</a>
+                    <span class="badge">8.3</span>
+                  </li>
+                  <li class="list-group-item list-group-item-warning">
+                    <a href="#">Безумный Макс</a>
+                    <span class="badge">8.1</span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="clear"></div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+         <p class="text-center"><a href="#">vonavud</a></p>
+       </div>
+     </footer>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="assets/js/bootstrap.min.js"></script>
+  </body>
 </html>
